# datacoolie

./: .gitignore  404.html  CONTRIBUTING.md  DEPLOY_AND_RELEASE.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release.yml
adr/: index.html
adr/0001-engine-fmt-parameter/: index.html
adr/0002-secret-provider-resolver-split/: index.html
adr/0003-transformer-ordering-slots/: index.html
adr/0004-raw-json-watermark-contract/: index.html
agents/: datacoolie-developer.agent.md
ai/: AGENTS.md  data-engineer.agent.md  datacoolie-data-engineer.agent.md  datacoolie-data-engineer.toml  datacoolie-developer.agent.md
ai/skills/datacoolie-architect/: SKILL.md
ai/skills/datacoolie-deploy/: SKILL.md
assets/javascripts/: mermaid-render.js  zoomable-media.js
assets/stylesheets/: zoomable-media.css
benchmark_results/: perf_report.md  polars_results.json  spark_results.json
blog/: index.html
changelog/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/engines/: index.html
concepts/load-strategies/: index.html
concepts/logging/: index.html
concepts/metadata-model/: index.html
concepts/metadata-providers/: index.html
concepts/orchestration/: index.html
concepts/secrets/: index.html
concepts/sources-and-destinations/: index.html
concepts/transformers-and-pipeline/: index.html
concepts/watermarks/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  robots.txt
docs/adr/: 0001-engine-fmt-parameter.md  0002-secret-provider-resolver-split.md  0003-transformer-ordering-slots.md  0004-raw-json-watermark-contract.md  index.md
docs/blog/: .authors.yml  index.md
docs/concepts/: architecture.md  engines.md  index.md  load-strategies.md  logging.md  metadata-model.md  metadata-providers.md  orchestration.md  platforms.md  secrets.md  sources-and-destinations.md  transformers-and-pipeline.md  watermarks.md
docs/extending/: index.md  writing-a-destination.md  writing-a-metadata-provider.md  writing-a-secret-resolver.md  writing-a-source.md  writing-a-transformer.md  writing-an-engine.md
docs/getting-started/: first-dataflow.md  index.md  installation.md  quickstart-polars.md  quickstart-spark.md  use-your-own-data.md
docs/how-to/: configure-api-metadata.md  configure-database-metadata.md  configure-file-metadata.md  deploy-to-aws-glue.md  deploy-to-databricks.md  deploy-to-fabric.md  expected-failure-scenarios.md  index.md  maintenance-vacuum-optimize.md  merge-and-scd2.md  partitioning-and-sanitization.md  replay-and-backfill.md  run-a-stage.md
docs/operations/: benchmarks.md  index.md  logging-layout.md  testing-strategy.md  troubleshooting.md
docs/reference/: cli.md  environment-variables.md  index.md
docs/scripts/: copy_schema_files.py  enhance_sitemap.py  gen_metadata_schema.py  gen_plugin_table.py
extending/: index.html
extending/writing-a-destination/: index.html
extending/writing-a-metadata-provider/: index.html
extending/writing-a-secret-resolver/: index.html
extending/writing-a-source/: index.html
extending/writing-a-transformer/: index.html
extending/writing-an-engine/: index.html
getting-started/: index.html
getting-started/first-dataflow/: index.html
getting-started/installation/: index.html
getting-started/quickstart-polars/: index.html
getting-started/quickstart-spark/: index.html
getting-started/use-your-own-data/: index.html
how-to/: index.html
how-to/configure-api-metadata/: index.html
how-to/configure-database-metadata/: index.html
how-to/configure-file-metadata/: index.html
how-to/deploy-to-aws-glue/: index.html
how-to/deploy-to-databricks/: index.html
how-to/deploy-to-fabric/: index.html
how-to/expected-failure-scenarios/: index.html
how-to/maintenance-vacuum-optimize/: index.html
how-to/merge-and-scd2/: index.html
how-to/metadata-guide/: index.html
how-to/partitioning-and-sanitization/: index.html
how-to/replay-and-backfill/: index.html
how-to/run-a-stage/: index.html
operations/: index.html
operations/benchmarks/: index.html
operations/logging-layout/: index.html
operations/testing-strategy/: index.html
operations/troubleshooting/: index.html
overrides/: 404.html  main.html
reference/: index.html
reference/cli/: index.html
reference/environment-variables/: index.html
reference/metadata-schema/: index.html
reference/plugin-entry-points/: index.html
schema/: compatibility.json
scripts/: enhance_sitemap.py  gen_metadata_schema.py  gen_plugin_table.py  inject_faq_schema.py  suppress_mkdocstrings_warnings.py
search/: search_index.json
skills/: TESTING_datacoolie-deploy.md  TESTING_datacoolie-init.md  TESTING_datacoolie-metadata.md
skills/datacoolie-deploy/: SKILL.md
skills/datacoolie-discover/: SKILL.md
skills/datacoolie-init/: SKILL.md
skills/datacoolie-metadata/: SKILL.md
skills/datacoolie-provision/: SKILL.md
skills/tests/: README.md  TESTING_datacoolie-deploy.md  TESTING_datacoolie-discover.md  TESTING_datacoolie-init.md  TESTING_datacoolie-metadata.md  _test_cloud.py  generate_delta_fixture.py  generate_extra_fixtures.py  run_all.py  run_discover.py
src/datacoolie/: __init__.py
tests/: conftest.py
tests/unit/: test_package_init.py  test_schema_enums.py
usecase-sim/: .gitignore  README.md
usecase-sim/docker/: Dockerfile.metadata-api  Dockerfile.mock-api  Dockerfile.spark  docker-compose.yml  init-iceberg-db.sql  mock_api_server.py  pg_api_metadata_server.py
usecase-sim/functions/: __init__.py  sources.py
usecase-sim/runner/: _runner_utils.py  maintenance.py  run.py  run_perf_benchmark.py  run_scenario.py
usecase-sim/scenarios/: SCENARIOS.md  scenarios.json
usecase-sim/scripts/: _common.py  generate_data.py  generate_perf_data.py  reset_data.py  reset_perf_data.py  reset_watermarks.py  setup_metadata.py  setup_platform.py
(+311 files in other folders)
