[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datacoolie"
version = "0.1.0"
description = "Metadata-driven ETL framework that unifies engines, stays cloud-agnostic, and is currently batch-first with a roadmap to micro-batch and streaming."
authors = [
    {name = "DataCoolie Team"},
    {name = "Do Bui Nguyen Hieu", email = "nguyenhieubis@gmail.com"},
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<4.0"
keywords = ["etl", "etl-framework", "data-engineering", "metadata-driven", "polars", "pyspark", "lakehouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

dependencies = [
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/datacoolie/datacoolie"
Repository = "https://github.com/datacoolie/datacoolie"
Documentation = "https://datacoolie.github.io/datacoolie/"

[project.optional-dependencies]
# --- Engines ---
spark = ["pyspark>=3.5"]
polars = ["polars>=1.0"]

# --- Table formats ---
delta-spark = ["delta-spark>=3.0"]
deltalake = ["deltalake>=0.15"]
iceberg = ["pyiceberg>=0.6"]

# --- Integrations ---
aws = ["boto3>=1.28"]
api = ["httpx>=0.24"]
db = ["sqlalchemy>=2.0,<3.0"]
excel = ["fastexcel>=0.9", "openpyxl>=3.1"]

# --- Platform bundles ---
fabric-spark = ["pyspark>=3.5", "delta-spark>=3.0"]
fabric-polars = ["polars>=1.0", "deltalake>=0.15"]
fabric = ["pyspark>=3.5", "delta-spark>=3.0", "polars>=1.0", "deltalake>=0.15"]
databricks-spark = ["pyspark>=3.5", "delta-spark>=3.0"]
databricks-polars = ["polars>=1.0", "deltalake>=0.15"]
databricks = ["pyspark>=3.5", "delta-spark>=3.0", "polars>=1.0", "deltalake>=0.15"]

# --- Everything ---
all = [
    "pyspark>=3.5",
    "delta-spark>=3.0",
    "polars>=1.0",
    "deltalake>=0.15",
    "pyiceberg>=0.6",
    "boto3>=1.28",
    "httpx>=0.24",
    "sqlalchemy>=2.0,<3.0",
    "fastexcel>=0.9",
    "openpyxl>=3.1",
]

[project.entry-points."datacoolie.engines"]
spark = "datacoolie.engines.spark_engine:SparkEngine"
polars = "datacoolie.engines.polars_engine:PolarsEngine"

[project.entry-points."datacoolie.platforms"]
local = "datacoolie.platforms.local_platform:LocalPlatform"
fabric = "datacoolie.platforms.fabric_platform:FabricPlatform"
databricks = "datacoolie.platforms.databricks_platform:DatabricksPlatform"
aws = "datacoolie.platforms.aws_platform:AWSPlatform"

[project.entry-points."datacoolie.sources"]
delta = "datacoolie.sources.delta_reader:DeltaReader"
parquet = "datacoolie.sources.file_reader:FileReader"
csv = "datacoolie.sources.file_reader:FileReader"
json = "datacoolie.sources.file_reader:FileReader"
jsonl = "datacoolie.sources.file_reader:FileReader"
avro = "datacoolie.sources.file_reader:FileReader"
excel = "datacoolie.sources.file_reader:FileReader"
sql = "datacoolie.sources.database_reader:DatabaseReader"
iceberg = "datacoolie.sources.iceberg_reader:IcebergReader"
function = "datacoolie.sources.python_function_reader:PythonFunctionReader"
api = "datacoolie.sources.api_reader:APIReader"

[project.entry-points."datacoolie.destinations"]
delta = "datacoolie.destinations.delta_writer:DeltaWriter"
iceberg = "datacoolie.destinations.iceberg_writer:IcebergWriter"
parquet = "datacoolie.destinations.file_writer:FileWriter"
csv = "datacoolie.destinations.file_writer:FileWriter"
json = "datacoolie.destinations.file_writer:FileWriter"
jsonl = "datacoolie.destinations.file_writer:FileWriter"
avro = "datacoolie.destinations.file_writer:FileWriter"

[project.entry-points."datacoolie.transformers"]
schema_converter = "datacoolie.transformers.schema_converter:SchemaConverter"
deduplicator = "datacoolie.transformers.deduplicator:Deduplicator"
column_adder = "datacoolie.transformers.column_adder:ColumnAdder"
system_column_adder = "datacoolie.transformers.column_adder:SystemColumnAdder"
partition_handler = "datacoolie.transformers.partition_handler:PartitionHandler"
column_name_sanitizer = "datacoolie.transformers.column_name_sanitizer:ColumnNameSanitizer"
scd2_column_adder = "datacoolie.transformers.column_adder:SCD2ColumnAdder"

[project.entry-points."datacoolie.resolvers"]
env = "datacoolie.core.secret_resolver:EnvResolver"

[tool.poetry]
packages = [{include = "datacoolie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tzdata = {version = ">=2024.1", markers = "sys_platform == 'win32'"}
# Optional — activated via [project.optional-dependencies]
pyspark = {version = ">=3.5", optional = true}
delta-spark = {version = ">=3.0", optional = true}
polars = {version = ">=1.0", optional = true}
deltalake = {version = ">=0.15", optional = true}
pyiceberg = {version = ">=0.6", optional = true}
boto3 = {version = ">=1.28", optional = true}
httpx = {version = ">=0.24", optional = true}
sqlalchemy = {version = "^2.0", optional = true}
fastexcel = {version = ">=0.9", optional = true}
openpyxl = {version = ">=3.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.0"
pytest-xdist = "^3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.26"}
pymdown-extensions = "^10.9"
mkdocs-gen-files = "^0.5"
mkdocs-literate-nav = "^0.6"
mkdocs-section-index = "^0.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--import-mode=importlib",
    "-n",
    "auto",
    "--dist",
    "loadgroup",
    "-m",
    "not spark",
]
log_cli = false
log_level = "WARNING"
markers = [
    "unit: marks tests as unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "spark: marks tests requiring SparkSession",
]


